create cylinder class
-move collision method from shapes.kl to object
-redo test collision to use cylinder object
-add copy methods for box and cylinder
-box object wrapper for a cylinder is made for collision detection.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "license" : "Apache 2.0",
   "author" : "kobbled",
   "source" : [
-    "src/shapes.kl"
   ],
   "tests" : [
     "test/test_shapes.kl"
@@ -20,9 +19,7 @@
     "errors",
     "pose",
     "KUnit",
-    "ktransw-macros"
-  ],
-  "tp-interfaces" : [
-    {"routine" : "shapes__point_collision_on_cylinder", "program_name" : "incylinder"}
+    "ktransw-macros",
+    "systemlib"
   ]
 }
